Implemented HealthKit request authorization platform channel

--- a/healthkit_plugin/example/ios/Runner/Info.plist
+++ b/healthkit_plugin/example/ios/Runner/Info.plist
@@ -45,5 +45,7 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSHealthShareUsageDescription</key>
+    <string>We need to access Health data.</string>
 </dict>
 </plist>
