--- a/healthkit_plugin/pubspec.yaml
+++ b/healthkit_plugin/pubspec.yaml
@@ -35,8 +35,8 @@ flutter:
   plugin:
     platforms:
       ios:
-        pluginClass: HealthkitPlugin
-
+        pluginClass: HealthKitPlugin
+        swiftVersion: 5.10
   # To add assets to your plugin package, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
